Made the project image modal more responsive. It is now spaced and positioned better, especially with changing screen sizes. The close button has also been spaced better (placed in the top right corner). Also fixed bug where the image gallery buttons were showing on the image modal (fixed by increasing z-index of modal).

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -580,6 +580,7 @@ body {
     display: none;
     flex-direction: column;
     position: fixed;
+    z-index: 3;
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.95);
@@ -588,18 +589,32 @@ body {
     overflow-y: auto;
 }
 
+.project-image-modal-spacer {
+    flex-grow: 1;
+    min-height: 75px;
+}
+
 #project-image-modal-content {
-    height: 60%;
-    padding: 30px;
+    flex-grow: 4;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
 }
 
+#project-image-modal-content > img {
+    height: 60%;
+    max-width: 90%;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
 #project-image-modal-text {
-    padding-left: 50px;
-    flex-basis: 400px;
     flex-grow: 1;
+    flex-basis: 400px;
+    max-width: 90%;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 #project-image-modal-title {
@@ -615,14 +630,10 @@ body {
     color: white;
 }
 
-.project-image-modal-spacer {
-    height: 20%;
-}
-
 #project-image-modal-close-button {
     position: fixed;
-    top: 75px;
-    right: 0px;
+    top: 0;
+    right: 0;
     padding: 15px;
     font-size: 75px;
     width: 75px;
